--- a/WebApiRouteDebugging/WebApiRouteDebugging.csproj
+++ b/WebApiRouteDebugging/WebApiRouteDebugging.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="readme.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
